--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "css-loader": "^0.28.9",
     "mdi-vue": "^0.2.11",
     "vue": "^2.5.2",
+    "vue-material": "^1.0.0-beta-7",
     "vue-notification": "^1.3.7",
     "vue-progressbar": "^0.7.3",
     "vue-router": "^3.0.1",
